--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_cache_manager: ^3.3.0
   google_fonts: ^4.0.3
   intl: ^0.18.0
 
